# NexusForge

./: BLOCKSTATEIDS.h  CMakeLists.txt  ModLoader.h  imgui.ini  main.cpp  main.h  worldgen.cpp
Core/: BlockPlacement.hpp  MacroChunk.hpp  MutationPipeline.hpp  Physics.hpp  World.hpp  WorldGeneration.hpp
Render/: BasicMesher.hpp  CameraMath.hpp  TelemetryHUD.hpp  TextureManager.hpp  VulkanBuffer.hpp  VulkanCommandManager.hpp  VulkanCore.hpp  VulkanMegaArena.hpp  VulkanPipeline.hpp  VulkanRenderer.hpp  VulkanSwapchain.hpp
Shaders/: frag.spv  shader.frag  shader.vert  vert.spv
